# gpui_chart

./: Cargo.toml  README.md  ROADMAP_SCOTTPLOT.md  architecture_improvements.md  flake.nix  plan.md  plan_gaps.md  plan_gpu.md  plan_tests.md  plan_top_qa.md  plan_top_step1_performance.md  plan_top_step2_aesthetics.md
examples/: demo.rs
src/: aggregation.rs  axis_renderer.rs  chart.rs  chart_container.rs  chart_pane.rs  chart_view.rs  data_types.rs  gaps.rs  gutter_manager.rs  hybrid_source.rs  layout.rs  lib.rs  navigator_view.rs  polars_source.rs  rendering.rs  scales.rs  simd.rs  theme.rs  transform.rs  utils.rs  view_controller.rs
src/chart_view/: actions.rs  input.rs  mod.rs  renderer.rs
src/data_types/: annotations.rs  axis.rs  data.rs  datasource.rs  mod.rs  plot_configs.rs  state.rs
src/decimation/: bucketing.rs  common.rs  lttb.rs  m4.rs  min_max.rs  mod.rs  ohlcv.rs
src/plot_types/: annotation.rs  area.rs  bar.rs  candlestick.rs  heatmap.rs  line.rs  mod.rs  (+1 more)
tests/: aggregation_bench.rs  axis_tests.rs  buffer_recycling_tests.rs  container_tests.rs  datasource_tests.rs  disappearing_data_test.rs  gap_aggregation_tests.rs  gap_performance_bench.rs  gpu_stress_test.rs  hybrid_tests.rs  integrity_tests.rs  legend_tests.rs  lod_tests.rs  logic_robustness.rs  lttb_tests.rs  ohlcv_stability_test.rs  ohlcv_tests.rs  performance_tests.rs  polars_tests.rs  qa_aggregation.rs  scale_gaps_test.rs  simd_tests.rs  stability_tests.rs  stress_tests.rs  sync_tests.rs  test_compilation.rs  transform_bench.rs  transform_tests.rs  ui_tests.rs  view_controller_tests.rs
(+1 files in other folders)
