[package]
name = "gpui_chart"
version = "0.1.0"
edition = "2021"
description = "GPUI Charting Library"
license = "MIT"

[dependencies]
gpui = "0.2.2"
parking_lot = "0.12"
glam = "0.28"
bytemuck = "1.24"
gpui-macros = "0.2.2"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
gpui-d3rs = "0.1.10"
chrono = "0.4"
chrono-tz = "0.10.4"
polars = { version = "0.51.0", optional = true, features = ["lazy", "search_sorted", "dtype-full", "dynamic_group_by"] }
polars-ops = { version = "0.51.0", optional = true, features = ["search_sorted"] }
rayon = "1.11.0"

[features]
default = ["polars"]
polars = ["dep:polars", "dep:polars-ops"]

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
rand = "0.9.2"
